--- a/css/estilos.css
+++ b/css/estilos.css
@@ -397,7 +397,7 @@ body section div .carousel-inner .carousel-item div p {
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
 
-/* Estilos Header*/
+/* Estilos NAVBAR*/
 header {
   background-color: #950107;
   text-transform: uppercase; }
@@ -418,17 +418,21 @@ header {
       text-decoration: none; }
       header nav ul li .nav-link {
         color: white; }
-        header nav ul li .nav-link .dropdown-menu {
-          background: none;
-          margin: 10px;
+    header nav ul li {
+      margin: 5px;
+      background-color: none;
+      border-color: none; }
+      header nav ul li .dropdown-menu {
+        background-color: none;
+        margin: 10px;
+        border-color: none;
+        text-decoration: none;
+        color: white; }
+        header nav ul li .dropdown-menu .dropdown-item {
+          background-color: #ff7d81;
+          border-radius: 10px;
           border-color: none;
-          text-decoration: none;
-          color: white; }
-          header nav ul li .nav-link .dropdown-menu .dropdown-item {
-            background-color: #ff7d81;
-            border-radius: 15px;
-            border-color: none;
-            text-decoration: none; }
+          text-decoration: none; }
 
 /*Estilos footer*/
 footer {
