--- a/css/estilos.css
+++ b/css/estilos.css
@@ -405,7 +405,7 @@ body section div .carousel-inner .carousel-item div p {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+  font-family: 'Montserrat', sans-serif; }
 
 /* Estilos NAVBAR*/
 header {
