--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,14 +12,13 @@
 @import "pages/receta_unica";
 @import "pages/inicio";
 
-
 /*Reset*/
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 
 }
 
